[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
# When using alpha-release, always use exact version, e.g. `version = "=0.x.y-alpha.z"
# This is because we treat alpha-releases as incompatible, but semver doesn't.
vsvg = { path = "crates/vsvg", version = "=0.3.0-rc.1" }
vsvg-viewer = { path = "crates/vsvg-viewer", version = "=0.3.0-rc.1" }
whiskers = { path = "crates/whiskers", version = "=0.3.0-rc.1" }
whiskers-derive = { path = "crates/whiskers-derive", version = "=0.3.0-rc.1" }

# dependencies
anyhow = "1"
bumpalo = "3.14.0"  # avoid yanked 3.12.1, pulled by wasm-bindgen
camino = "1.1.0"
convert_case = "0.6.0"
criterion = "0.5.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "persistence",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.24.1"
getrandom = { version = "0.2", features = ["js"] } # wasm support
itertools = "0.12.0"
kurbo = "0.10.3"
log = "0.4.20"
puffin = "0.18.0"  # sync with egui
puffin_egui = "0.24.0"  # sync with egui
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-time = "0.2.0"
winit = "0.28.7" # same as egui
wgpu = { version = "0.18", default-features = false, features = ["webgl"] } # same as egui

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
