[workspace]
members = [
  "crates/*"
]
resolver = "2"

[workspace.dependencies]
# When using alpha-release, always use exact version, e.g. `version = "=0.x.y-alpha.z"
# This is because we treat alpha-releases as incompatible, but semver doesn't.
vsvg = { path = "crates/vsvg", version = "=0.5.0-alpha.0" }
vsvg-viewer = { path = "crates/vsvg-viewer", version = "=0.5.0-alpha.0" }
whiskers = { path = "crates/whiskers", version = "=0.5.0-alpha.0" }
whiskers-derive = { path = "crates/whiskers-derive", version = "=0.5.0-alpha.0" }
whiskers-widgets = { path = "crates/whiskers-widgets", version = "=0.5.0-alpha.0" }

# dependencies
anyhow = "1"
approx = "0.5.1"
arrayvec = "0.7.2"
base64 = "0.21.4"
bitvec = "1.0.1"
bumpalo = "3.14.0"  # avoid yanked 3.12.1, pulled by wasm-bindgen
bytemuck = "1.13.1"
camino = "1.1.0"
cfg_aliases = "0.2.1"
cgmath = "0.18.0"
clap = "4.4.12"
convert_case = "0.6.0"
criterion = "0.5.1"
dhat = "0.3.2"  # for heap profiling
eframe = { version = "0.27.2", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "wayland",
  "x11",
] }
egui = "0.27.2"
env_logger = "0.10.0"
geo = "0.27"  # for point interop only
geos = "8.3"
getrandom = { version = "0.2", features = ["js"] } # wasm support
glam = "0"  # for point interop only
indexmap = "2.0.2"
itertools = "0.12.0"
js-sys = "0.3.64"
kdtree = "0.7.0"
kurbo = "0.11"
lazy_static = "1.4.0"
log = "0.4.20"
lyon_geom = "1.0.4"
noise = "0.8.2"
num-traits = "0.2.17"
pollster = "0.3.0"
puffin = "0.19.0"
puffin_http = "0.16"
proc-macro2 = "1.0.67"
quote = "1.0.33"
quick-xml = "0.31"  # sync with egui
open = "5.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.8.0"
raw-window-handle = "0.5"  # sync with eframe
regex = "1.7.1"
rfd = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.107"
svg = "0.15"
syn = "2.0"
thiserror = "1.0.49"
time = "0.3.20"
tracing-subscriber = "0.3.16"
usvg = "0.42.0"
voronoice = "0.2.0"
wasm-bindgen = "0.2.92" # sync with CI!!
wasm-bindgen-futures = "0.4.42"
web-time = "0.2"  # sync with egui-winit
web-sys = "0.3.64"
wgpu = { version = "0.19.1", default-features = false, features = ["webgl"] } # sync with egui-wgpu
winit = "0.29" # sync with egui-winit

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[patch.crates-io]
# geo = { path = "../geo/geo" }
