[package]
name = "vsvg-core"
description = "Rust prototype of vpype-core V2"
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
usvg = "0.29.0"
rosvgtree = "0.1.0"
rctree = "*"  # Let usvg decide on the version
svg = "0.13.1"
rayon = "1.6.1"
kurbo = "0.9.0"
arrayvec = "0.7.2"
lyon_geom = "1.0.4"
regex = "1.7.1"
lazy_static = "1.4.0"
indexmap = {version = "1.9.2", features = ["rayon"]}
kdtree = "0.7.0"
bitvec = "1.0.1"
time = {version="0.3.20", features = ["formatting"]}

# optional dependencies, mainly for Point interop.
egui = { version ="*", optional = true}

[dev-dependencies]
approx = "0.5.1"
criterion = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "bench_path_index"
harness = false
