[package]
name = "vsvg-core"
description = "Rust prototype of vpype-core V2"
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
kurbo.workspace = true
usvg = "0.29.0"
rosvgtree = "0.1.0"
rctree = "*"  # Let usvg decide on the version
svg = "0.13.1"
rayon = "1.6.1"
arrayvec = "0.7.2"
lyon_geom = "1.0.4"
regex = "1.7.1"
lazy_static = "1.4.0"
indexmap = {version = "1.9.2", features = ["rayon"]}
kdtree = "0.7.0"
bitvec = "1.0.1"
time = {version="0.3.20", features = ["formatting"]}

# optional dependencies, mainly for Point interop.
egui = { workspace=true, optional = true }
glam = { version="0", optional = true }
bevy = { version="0", optional = true, default-features = false }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.4.0"
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "bench_path_index"
harness = false
