[package]
name = "vsvg-sketch"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
vsvg = { path = "../vsvg", features = ["geo"] }
vsvg-viewer = { path = "../vsvg-viewer", optional = true }
vsvg-sketch-derive = { path = "../vsvg-sketch-derive" }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
kurbo.workspace = true
anyhow.workspace = true
egui.workspace = true
web-time.workspace = true

# for examples
[dev-dependencies]
geo = "0.26.0"
voronoice = "0.2.0"
itertools.workspace = true

[features]
default = ["viewer"]
viewer = ["dep:vsvg-viewer"]
