[package]
name = "vsvg-viewer"
description = "Rust prototype for vpype-viewer V2."
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"



[dependencies]
vsvg-core = { path = "../vsvg-core" }
kurbo = "0.9.1"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.4.0"
winit = "0.28.3"
wgpu = "0.15.1"
env_logger = "0.10.0"
pollster = "0.3.0"
bytemuck = {version = "1.13.1",  features = [ "derive" ]}
raw-window-handle = "0.5.2"
cgmath = "0.18.0"
tracing-subscriber = "0.3.16"


[[bench]]
name = "bench_triangulation"
harness = false
