[package]
name = "vsvg-viewer"
description = "Rust prototype for vpype-viewer V2."
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
vsvg = { path = "../vsvg" }
kurbo.workspace = true
egui.workspace = true
eframe.workspace = true
serde.workspace = true
wgpu = "0.15.1"
bytemuck = {version = "1.13.1",  features = [ "derive" ]}
cgmath = "0.18.0"

[dev-dependencies]  # mostly for examples
criterion = "0.4.0"
winit = "0.28.3"
env_logger = "0.10.0"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
tracing-subscriber = "0.3.16"
