[package]
name = "whiskers-web-demo"
version = "0.1.0-alpha.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
vsvg = { path = "../vsvg", features = ["geo"] }
vsvg-viewer = { path = "../vsvg-viewer" }
vsvg-sketch = { path = "../vsvg-sketch", features = ["viewer"] }
vsvg-sketch-derive = { path = "../vsvg-sketch-derive" }
log.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
getrandom.workspace = true
kurbo.workspace = true
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
serde.workspace = true
web-time.workspace = true
convert_case.workspace = true
geo = "0.26.0"
voronoice = "0.2.0"
itertools.workspace = true
wgpu = {version = "0.16.3", default-features = false, features = ["webgl"] } # same a egui

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
