[package]
name = "msvg"
description = "Fast SVG browser for pen-plotter users"
authors = ["Antoine Beyeler"]
version = "0.2.0-rc.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["command-line-utilities", "graphics", "visualization"]
publish = false # dont publish for now...

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
eframe.workspace = true
