[package]
name = "msvg"
description = "Fast SVG browser for pen-plotter users"
authors = ["Antoine Beyeler"]
version = "0.3.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["command-line-utilities", "graphics", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsvg.workspace = true
vsvg-viewer.workspace = true

anyhow.workspace = true
camino.workspace = true
egui.workspace = true
eframe.workspace = true
rayon.workspace = true
serde.workspace = true
