[package]
name = "vsvg-cli"
description = "An experimental CLI SVG manipulation and viewer tool for plotter users."
authors = ["Antoine Beyeler"]
version = "0.5.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["command-line-utilities", "graphics", "visualization"]

[package.metadata.wix]
upgrade-guid = "C62CB128-34BD-4A9F-8519-1E18CFCBB1E3"
path-guid = "122B6016-4C30-4BEB-BD76-BB9F621983FB"
license = false
eula = false

[[bin]]
name = "vsvg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsvg = { workspace = true, features = ["egui"] }
vsvg-viewer.workspace = true

clap = { workspace = true, features = ["cargo"] }
dhat = { version = "0.3.2", optional = true } # for heap profiling
eframe.workspace = true
egui.workspace = true
kurbo.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
tracing-subscriber = "0.3.16"


# for dhat-heap!!
#[profile.release]
#debug = 1

[features]
puffin = ["vsvg/puffin", "vsvg-viewer/puffin"]
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
