[package]
name = "vsvg-viewer"
description = "Portable, hardware-accelerated, extensible viewer for the vsvg crate."
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license-file = "../../LICENSE"
categories = ["graphics", "visualization"]


[dependencies]
anyhow.workspace = true
bytemuck = {version = "1.13.1",  features = [ "derive" ]}
cgmath = "0.18.0"
eframe.workspace = true
egui.workspace = true
kurbo.workspace = true
log.workspace = true
serde.workspace = true
vsvg.workspace = true
wgpu.workspace = true

[dev-dependencies]  # mostly for examples
env_logger = "0.10.0"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.5.2"
tracing-subscriber = "0.3.16"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4.0"
winit = "0.28.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
