[package]
name = "vsvg-viewer"
description = "Portable, hardware-accelerated, extensible viewer for the vsvg crate."
authors = ["Antoine Beyeler"]
version = "0.5.0-rc.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["graphics", "visualization"]


[dependencies]
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cgmath.workspace = true
eframe.workspace = true
egui.workspace = true
kurbo.workspace = true
log.workspace = true
puffin = { workspace = true, optional = true }
puffin_http = { workspace = true, optional = true }
rayon.workspace = true
serde.workspace = true
vsvg = { workspace = true, features = ["egui"] }
wgpu.workspace = true

[dev-dependencies]  # mostly for examples
env_logger.workspace = true
pollster.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cfg_aliases.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion.workspace = true
winit.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true


[features]
puffin = ["dep:puffin", "dep:puffin_http", "vsvg/puffin", "egui/puffin", "eframe/puffin"]
