[package]
name = "vsvg"
description = "Core library for pen-plotter graphics."
authors = ["Antoine Beyeler"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license-file = "../../LICENSE"
categories = ["graphics", "visualization"]

[dependencies]
anyhow.workspace = true
arrayvec = "0.7.2"
base64 = "0.21.4"
bitvec = "1.0.1"
indexmap = { version = "2.0.2", features = ["rayon"] }
kdtree = "0.7.0"
kurbo.workspace = true
lazy_static = "1.4.0"
log.workspace = true
lyon_geom = "1.0.4"
puffin = { workspace = true, optional = true }
quick-xml = "0.30.0"
rayon.workspace = true
regex = "1.7.1"
serde.workspace = true
serde_json.workspace = true
svg = "0.14.0"
thiserror.workspace = true
time = { version = "0.3.20", features = ["formatting"] }
usvg = "0.35.0"

# optional dependencies, mainly for Point interop.
geo = { version = "0.26.0", optional = true }
egui = { workspace = true, optional = true }
glam = { version = "0", optional = true }

[dev-dependencies]
approx = "0.5.1"
rand.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"

[features]
default = ["geo"]
puffin = ["dep:puffin"]

[[bench]]
name = "bench_path_index"
harness = false
