[package]
name = "vsvg"
description = "Core library for pen-plotter graphics."
authors = ["Antoine Beyeler"]
version = "0.6.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["graphics", "visualization"]

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
base64.workspace = true
bitvec.workspace = true
indexmap = { workspace = true, features = ["rayon"] }
kdtree.workspace = true
kurbo.workspace = true
lazy_static.workspace = true
log.workspace = true
lyon_geom.workspace = true
num-traits.workspace = true
puffin = { workspace = true, optional = true }
quick-xml.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
svg.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
usvg.workspace = true

# optional support for whiskers widgets
whiskers-widgets = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

# optional dependencies, mainly for Point interop.
geo = { workspace = true, optional = true }
glam = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion.workspace = true

[features]
default = ["geo"]
puffin = ["dep:puffin"]
whiskers-widgets = ["dep:whiskers-widgets", "dep:egui"]
egui = ["dep:egui"]

[[bench]]
name = "bench_path_index"
harness = false

[[bench]]
name = "bench_flatten"
harness = false
