[package]
name = "vsvg"
description = "Core library for pen-plotter graphics."
authors = ["Antoine Beyeler"]
version = "0.6.0-alpha.0"
edition.workspace = true
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["graphics", "visualization"]

[dependencies]
arrayvec.workspace = true
base64.workspace = true
bitvec.workspace = true
indexmap = { workspace = true, features = ["rayon"] }
kdtree.workspace = true
kurbo.workspace = true
lyon_geom.workspace = true
num-traits.workspace = true
puffin = { workspace = true, optional = true }
profiling.workspace = true
quick-xml.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
svg.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
usvg.workspace = true

# optional support for whiskers widgets
whiskers-widgets = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

# geo is required for polygon operations
geo.workspace = true

# optional dependencies, mainly for Point interop.
glam = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion.workspace = true

[features]
default = []
puffin = ["dep:puffin", "profiling/profile-with-puffin"]
whiskers-widgets = ["dep:whiskers-widgets", "dep:egui"]
egui = ["dep:egui"]

[[bench]]
name = "bench_path_index"
harness = false

[[bench]]
name = "bench_flatten"
harness = false

[package.metadata.cargo-machete]
ignored = ["profiling"]

[package.metadata.cargo-shear]
ignored = ["profiling"]
