[package]
name = "whiskers-derive"
description = "Procedural macro crate for whiskers."
authors = ["Antoine Beyeler"]
version = "0.4.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full", "visit-mut"] }
quote = "1.0.33"
proc-macro2 = "1.0.67"
convert_case.workspace = true
