[package]
name = "whiskers-derive"
description = "Procedural macro crate for whiskers."
authors = ["Antoine Beyeler"]
version = "0.5.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "visit-mut"] }
quote.workspace = true
proc-macro2.workspace = true
convert_case.workspace = true
