[package]
name = "whiskers-gallery"
description = "Gallery of whiskers sketches for whisk.rs"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-thumbnails"
path = "src/bin/generate_thumbnails.rs"

[dependencies]
whiskers = { workspace = true, features = ["viewer"] }
vsvg-viewer.workspace = true
vsvg.workspace = true
itertools.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
