[package]
name = "whiskers-web-demo"
description = "Official demo sketch for whiskers."
version = "0.6.0-alpha.0"
edition.workspace = true
readme = "README.md"
homepage = "https//bylr.info/vsvg/"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whiskers = { workspace = true, features = ["viewer"] }
itertools.workspace = true
