[package]
name = "whiskers"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
vsvg = { path = "../vsvg", features = ["geo"] }
vsvg-viewer = { path = "../vsvg-viewer", optional = true }
whiskers-derive = { path = "../whiskers-derive" }
log.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
getrandom.workspace = true
kurbo.workspace = true
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
serde.workspace = true
web-time.workspace = true
convert_case.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.12.0", default_features = false, features = [
    "xdg-portal",
] }
open = "5.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"

# for examples
[dev-dependencies]
geo = "0.26.0"
voronoice = "0.2.0"
itertools.workspace = true

[features]
default = ["viewer"]
viewer = ["dep:vsvg-viewer"]
