[package]
name = "whiskers"
authors = ["Antoine Beyeler"]
description = "Processing-like, interactive sketching environment for plotter generative art."
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license-file = "../../LICENSE"
categories = ["command-line-utilities", "graphics", "visualization"]

[dependencies]
vsvg = { workspace = true, features = ["geo"] }
vsvg-viewer = { workspace = true, optional = true }
whiskers-derive.workspace = true
log.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
getrandom.workspace = true
kurbo.workspace = true
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
serde.workspace = true
web-time.workspace = true
convert_case.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.12.0", default_features = false, features = [
    "xdg-portal",
] }
open = "5.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.64"
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Url",
    "Window",
]



# for examples
[dev-dependencies]
geo = "0.26.0"
itertools.workspace = true
noise = "0.8.2"
voronoice = "0.2.0"

[features]
default = ["viewer"]
viewer = ["dep:vsvg-viewer"]
