[package]
name = "whiskers"
authors = ["Antoine Beyeler"]
description = "Processing-like, interactive sketching environment for plotter generative art."
version = "0.6.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/abey79/vsvg"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
categories = ["command-line-utilities", "graphics", "visualization"]

[dependencies]
vsvg = { workspace = true, features = ["geo", "whiskers-widgets", "egui"] }
vsvg-viewer = { workspace = true, optional = true }
whiskers-widgets.workspace = true

anyhow.workspace = true
convert_case.workspace = true
eframe.workspace = true
egui.workspace = true
getrandom.workspace = true  # needed for wasm build
kurbo.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
serde.workspace = true
web-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true, default_features = false, features = [
    "async-std",
    "xdg-portal",
] }
open.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Url",
    "Window",
]

# for examples
[dev-dependencies]
geo.workspace = true
itertools.workspace = true
noise.workspace = true
rayon.workspace = true
voronoice.workspace = true

# for particle.rs example
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
geos.workspace = true

[features]
default = ["viewer", "puffin"]
viewer = ["dep:vsvg-viewer"]
puffin = ["vsvg/puffin", "vsvg-viewer/puffin"]
